2002-02-18  Jody Goldberg <jody@gnome.org>

	* Release 1.1.0

2002-01-23  Jody Goldberg <jody@gnome.org>

	* mps.c : glib now has g_alloca, no need for portability.h

2002-01-21  Jody Goldberg <jody@gnome.org>

	* Release 1.0.3

2002-01-15  Jody Goldberg <jody@gnome.org>

	* Release 1.0.2

2002-01-06  Jody Goldberg <jody@gnome.org>

	* Release 1.0.1

2002-01-03  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* mps.c : Changed types to fix signedness warnings.

2001-12-31  Jody Goldberg <jody@gnome.org>

	* mps.c (mps_input_context_new) : supress warnings.
	(mps_get_line) : ditto.
	(mps_parse_name) : ditto.

2001-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.0.0

2001-12-29  Jody Goldberg <jody@gnome.org>

	* mps.c (mps_input_context_new) : formating.
	  init row_hash, col_hash,  col_name_tbl, matrix.
	(mps_input_context_destroy) : be more careful about errors.
	(mps_file_open) : handle errors more smoothly.
	(mps_create_sheet) : don't complain if there is a problem.

2001-12-24  Jody Goldberg <jody@gnome.org>

	* Release 0.99.1

2001-12-15  Jody Goldberg <jody@gnome.org>

	* Release 0.99.0

2001-11-19  Jody Goldberg <jgoldberg@home.com>

	* Release 0.76

2001-11-05  Jody Goldberg <jgoldberg@home,com>

	* Release 0.75

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.74

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.73

2001-10-26  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* mps.c: Added the i18n stuff that got lost in previous commit.

2001-10-25  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* mps.c: Moved to character position based scanning since many MPS
	files (like Netlib's blend) skip tokens.  MPS is actually position
	based according to its definition.  Some work towards BOUND
	support.

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* Release 0.72

2001-10-07  Jody Goldberg <jgoldberg@home.com>

	* Release 0.71

2001-09-25  Jon K Hellan  <hellan@acm.org>

	* .cvsignore: Add plugin.xml
