@@ -1,3 +1,8 @@
+2001-02-20  Morten Welinder  <terra@diku.dk>
+
+	* mps.c (mps_parse_name): Fix isspace usage.
+	(mps_create_sheet): Constify.
+
 2002-02-18  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.0
